# uniffi-wasm-playground

./: .dmypy.json  .gitmodules  Cargo.toml  FINDINGS.md  README.md  build.py  build.rs
consumers/python/: app.py  arithmetic.py  playground.py
consumers/web/: .gitignore  index.html  index.js
consumers/web/pkg/: arithmetical.d.ts  arithmetical.js  playground.d.ts  playground.js
src/: arithmetic.udl  falcon.h  lib.rs  playground.udl
tests/: test_generated_bindings.rs
tests/bindings/: test_playground.kts  test_playground.py  test_playground.rb  test_playground.swift
